--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="name">Name:</label><br>
+  <input id="name" type="text" placeholder="name"><br>
+
+<label for="phone">Phone Number:</label><br>
+  <input id="phone" type="text" placeholder="Phone Number"><br>
+
+		<label for="address">Address:</label><br>
+  <input id="address" type="text" placeholder="Address"><br>
+
+<label for="checkbox">Have you ever lived with a Dog before?</label><br>
+	<input id="checkbox" type="checkbox"><br>
+
+<label for="multiSelect">Please select your preferred breeds:</label><br>
+	<select name="Breeds" id="multiSelect">
+		<option value="Beagle">Beagle</option>
+	<option value="German">German</option>
+		<option value="Labro">Labro</option>
+	</select>
+	
+	<select name="Breeds" id="multiSelect">
+	<input id="submit" type="submit"><br>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
