--- a/main.html
+++ b/main.html
@@ -25,9 +25,9 @@
 		<option value="Beagle">Beagle</option>
 	<option value="German">German</option>
 		<option value="Labro">Labro</option>
-	</select>
+	</select><br>
 	
-	<select name="Breeds" id="multiSelect">
+	
 	<input id="submit" type="submit"><br>
 
 	
