--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
 	<label for="name">Name:</label><br>
   <input id="name" type="text" placeholder="name"><br>
 
@@ -27,9 +28,9 @@
 		<option value="Labro">Labro</option>
 	</select><br>
 	
-	
+	<label for="submit">Submit:</label><br>
 	<input id="submit" type="submit"><br>
-
+	</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
