--- a/main.html
+++ b/main.html
@@ -8,29 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method="post">
+	
 	<label for="name">Name:</label><br>
   <input id="name" type="text" placeholder="name"><br>
 
+		<form>
 <label for="phone">Phone Number:</label><br>
   <input id="phone" type="text" placeholder="Phone Number"><br>
-
+		</form>
+		<form>
 		<label for="address">Address:</label><br>
   <input id="address" type="text" placeholder="Address"><br>
-
-<label for="checkbox">Have you ever lived with a Dog before?</label><br>
-	<input id="checkbox" type="checkbox"><br>
-
-<label for="multiSelect">Please select your preferred breeds:</label><br>
-	<select name="Breeds" id="multiSelect">
-		<option value="Beagle">Beagle</option>
-	<option value="German">German</option>
-		<option value="Labro">Labro</option>
-	</select><br>
+		</form>
+<label for="checkbox">Have you ever lived with a Dog before?</label>
+<input type="checkbox" id="checkbox" name="livedWithDog" value="Have you ever lived with a Dog before?">
+<br>
 	
-	<label for="submit">Submit:</label><br>
-	<input id="submit" type="submit"><br>
-	</form>
+<label for="multiSelect">Please select your preferred breeds:</label>
+<select id="multiSelect" name="preferredBreeds" multiple>
+  <option value="breed1">Breed 1</option>
+  <option value="breed2">Breed 2</option>
+  <option value="breed3">Breed 3</option>
+</select><br>
+
+		
+	<input type="submit" id="submit" value="Submit">
 	
     <script type="text/javascript" src="./script.js">
 </script>
