--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	
 	<label for="name">Name:</label><br>
-  <input id="name" type="text" placeholder="name"><br>
+  <input id="name" type="text" placeholder="Name"><br>
 
 		<form>
 <label for="phone">Phone Number:</label><br>
